--- a/steward.html
+++ b/steward.html
@@ -156,25 +156,6 @@
       font-weight:700;
     }
 
-    /* NEW: ACCUSED reminder box */
-    .amberBox{
-      border:1px solid #fcd34d;
-      background:#fffbeb;
-      color:#92400e;
-      border-radius:12px;
-      padding:10px 12px;
-      margin-top:10px;
-      font-size:13px;
-      line-height:1.25;
-      font-weight:800;
-    }
-    .amberBox small{
-      display:block;
-      margin-top:6px;
-      font-weight:700;
-      opacity:.95;
-    }
-
     .videoWrap {
       position:relative; width:100%; padding-top:56.25%; background:#000; border-radius:12px; overflow:hidden;
       border:1px solid #e5e7eb; margin-top:10px;
@@ -202,7 +183,7 @@
     .wrap #rulesAuditCard { grid-column: 1 / -1 !important; width:100% !important; max-width:100% !important; }
     #rulesAuditCard { width:100% !important; max-width:100% !important; }
 
-    /* ========= NEW: Effect checklist UI ========= */
+    /* ========= UPDATED: Effect checklist UI (MATCH HEAD STEWARD) ========= */
     .effectWrap{
       margin-top:10px;
       padding:10px 12px;
@@ -210,55 +191,142 @@
       border-radius:12px;
       background:#fff;
     }
+    .effectTop{
+      display:flex;
+      justify-content:space-between;
+      align-items:flex-start;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .effectHeading{
+      font-weight:900;
+      font-size:13px;
+      margin-bottom:4px;
+      color:#111827;
+    }
     .effectCols{
       display:grid;
       grid-template-columns: 1fr 1fr;
       gap:10px;
+      margin-top:10px;
     }
-    .effectColTitle{
+    .effectCol{
+      border:1px solid #e5e7eb;
+      border-radius:12px;
+      background:#fff;
+      overflow:hidden;
+    }
+    .effectColHeader{
+      padding:10px 12px;
+      border-bottom:1px solid #e5e7eb;
+      background:#f9fafb;
       font-weight:900;
       font-size:12px;
       color:#111827;
-      margin-bottom:6px;
+    }
+    .effectList{
+      padding:8px;
+      display:flex;
+      flex-direction:column;
+      gap:8px;
     }
     .effectItem{
       display:flex;
       gap:10px;
       align-items:flex-start;
-      padding:8px 10px;
+      padding:10px 10px;
       border:1px solid #e5e7eb;
       border-radius:12px;
-      background:#fafafa;
+      background:#fff;
+      cursor:pointer;
     }
+    .effectItem:hover{ background:#f9fafb; }
     .effectItem input[type="checkbox"]{
       width:18px;
       height:18px;
       margin-top:2px;
       flex:0 0 auto;
+      cursor:pointer;
     }
-    .effectText{
+    .effectMain{
+      flex:1;
+      min-width:0;
+    }
+    .effectTitle{
       font-size:13px;
       line-height:1.25;
+      font-weight:800;
       color:#111827;
+      word-break:break-word;
     }
-    .effectText small{
-      display:block;
-      margin-top:3px;
-      color:#6b7280;
+    .effectNote{
+      margin-top:4px;
+      font-size:11px;
       font-weight:700;
+      color:#6b7280;
+      line-height:1.25;
+      word-break:break-word;
     }
-    .effectPreview{
+    .effectDeltaPill{
+      flex:0 0 auto;
+      margin-left:auto;
+      margin-top:1px;
+      padding:2px 8px;
+      border-radius:999px;
+      font-size:12px;
+      font-weight:900;
+      border:1px solid #e5e7eb;
+      background:#fff;
+      white-space:nowrap;
+    }
+    .deltaAdd{
+      border-color:#fca5a5;
+      background:#fef2f2;
+      color:#991b1b;
+    }
+    .deltaSub{
+      border-color:#86efac;
+      background:#ecfdf5;
+      color:#065f46;
+    }
+    .effectItemSpecialRed{
+      border-color:#fca5a5 !important;
+      background:#fef2f2 !important;
+    }
+    .effectItemSpecialRed .effectTitle{ color:#991b1b; }
+    .effectItemSpecialRed .effectNote{ color:#991b1b; opacity:0.9; }
+    .effectPills{
+      display:flex;
+      gap:8px;
+      flex-wrap:wrap;
+      justify-content:flex-end;
+    }
+    .calcWrap{
       margin-top:10px;
-      padding:10px 12px;
       border:1px solid #e5e7eb;
       border-radius:12px;
-      background:#f9fafb;
-      font-size:13px;
-      line-height:1.25;
-      color:#111827;
+      background:#fff;
+      padding:10px 12px;
     }
-    .effectPreview .k{ font-weight:900; }
-    .effectPreview .mutedLine{ margin-top:6px; color:#6b7280; font-size:12px; }
+    .calcTitle{
+      font-weight:900;
+      font-size:12px;
+      color:#111827;
+      margin-bottom:6px;
+    }
+    .calcLine{
+      font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
+      font-size:12px;
+      color:#111827;
+      white-space:pre-wrap;
+    }
+    .calcSub{
+      margin-top:6px;
+      font-size:11px;
+      color:#6b7280;
+      font-weight:700;
+      line-height:1.25;
+    }
 
     @media (max-width: 980px) {
       header { flex-direction:column; align-items:stretch; }
@@ -273,6 +341,7 @@
       .brand { align-items:center; }
       .brand img { width:34px; height:34px; margin-top:0; }
       .effectCols{ grid-template-columns: 1fr; }
+      .effectPills{ justify-content:flex-start; }
     }
   </style>
 </head>
@@ -448,12 +517,6 @@
             Submit your CAUSE review first, then head to Discord to deliberate as a steward team on the final outcome.
           </div>
 
-          <!-- ✅ NEW: ACCUSED reminder (CAUSE + EFFECT applies to accused only) -->
-          <div class="amberBox">
-            IMPORTANT: You are scoring the <b>ACCUSED</b> driver only — at no point are you scoring the reporting driver.
-            <small>Make sure the footage you’re using fairly shows the accused driver’s actions (some clips only show the reporter’s angle).</small>
-          </div>
-
           <div class="grid2" style="margin-top:10px;">
             <div>
               <label class="muted">C — Control (1–5)</label>
@@ -501,40 +564,50 @@
           </div>
 
           <!-- =============================
-               CAUSE + EFFECT SECTION
+               UPDATED: CAUSE + EFFECT SECTION
+               (MATCH HEAD STEWARD LOOK + COLOURS)
                ============================= -->
           <div class="effectWrap" id="effectWrap">
-            <div class="row" style="justify-content:space-between; align-items:flex-start;">
-              <div>
-                <div style="font-weight:900; font-size:13px; margin-bottom:4px;">EFFECT (tick all that apply)</div>
+            <div class="effectTop">
+              <div style="min-width:220px; flex:1;">
+                <div class="effectHeading">EFFECT (tick all that apply)</div>
                 <div class="muted">
                   Ensure you remember this is scoring the <b>ACCUSED</b> driver — at no point are you scoring the reporting driver — so ensure footage is checked.
                 </div>
+                <div class="muted" style="margin-top:4px;">
+                  Effects stack using micro-values. Your total EFFECT is clamped to <b>-1.00 to +1.00</b>. EFFECT modifies the aggregated CAUSE total (RAW score) to produce a final CAUSE+EFFECT score.
+                </div>
               </div>
-              <button id="clearEffectsBtn">Clear Effects</button>
+
+              <div style="display:flex; flex-direction:column; align-items:flex-end; gap:8px;">
+                <div class="effectPills">
+                  <div class="pill" id="pillRaw">RAW: <strong>—</strong></div>
+                  <div class="pill" id="pillEff">EFFECT: <strong>—</strong></div>
+                  <div class="pill" id="pillFinal">FINAL: <strong>—</strong></div>
+                </div>
+                <button id="clearEffectsBtn">Clear Effects</button>
+              </div>
             </div>
 
-            <div class="effectCols" style="margin-top:10px;">
-              <div>
-                <div class="effectColTitle">Aggravating (adds)</div>
-                <div id="effectsAggravating"></div>
+            <div class="effectCols">
+              <div class="effectCol">
+                <div class="effectColHeader">Aggravating (adds)</div>
+                <div class="effectList" id="effectsAggravating"></div>
               </div>
-              <div>
-                <div class="effectColTitle">Mitigating (reduces)</div>
-                <div id="effectsMitigating"></div>
+
+              <div class="effectCol">
+                <div class="effectColHeader">Mitigating (reduces)</div>
+                <div class="effectList" id="effectsMitigating"></div>
               </div>
             </div>
 
-            <div class="effectPreview" id="effectPreviewBox">
-              <div><span class="k">Raw CAUSE (this steward):</span> <span id="rawCauseOut">—</span></div>
-              <div style="margin-top:6px;"><span class="k">EFFECT total (stacked):</span> <span id="effectTotalOut">—</span></div>
-              <div style="margin-top:6px;"><span class="k">EFFECT applied (clamped):</span> <span id="effectAppliedOut">—</span></div>
-              <div style="margin-top:6px;"><span class="k">Final Score (this steward):</span> <span id="finalScoreOut">—</span></div>
-              <div class="mutedLine" id="effectSelectedOut">Selected effects: —</div>
-            </div>
-
-            <div class="muted" style="margin-top:8px;">
-              Note: “First Lap Incident” is an EFFECT checkbox (not an automatic clamp) by design.
+            <div class="calcWrap" id="effectCalcBox">
+              <div class="calcTitle">Calculation</div>
+              <div class="calcLine" id="calcLine">RAW —  +  EFFECT —  =  FINAL —</div>
+              <div class="calcSub" id="calcSub">
+                EFFECT is a micro-adjustment layer. It is intended to swing outcomes when context is clearly present in the evidence.
+              </div>
+              <div class="calcSub" id="effectSelectedOut">Selected effects: —</div>
             </div>
           </div>
 
@@ -1339,14 +1412,17 @@
     }
 
     // ==========================
-    // EFFECT SYSTEM (STACKING, MICRO VALUES)
+    // EFFECT SYSTEM (STACKING, MICRO VALUES) — MATCH HEAD STEWARD
     // ==========================
     const EFFECT_CAP_MIN = -1.00;
     const EFFECT_CAP_MAX =  1.00;
 
+    // First lap "golden bullet" rule (as per your direction): when selected, FINAL is clamped to >= 4.0
+    const FIRST_LAP_FINAL_MIN = 4.0;
+
     const EFFECTS = [
       // Aggravating (adds)
-      { key:"first_lap_incident", label:"First corner Incident (AUTOMATICALLY SEVERE)", delta:+0.40, group:"add", note:"Golden bullet: first lap context" },
+      { key:"first_lap_incident", label:"First corner Incident (AUTOMATICALLY SEVERE)", delta:+0.40, group:"add", note:"First corner context: final score is clamped to >= 4.0 when selected" },
       { key:"lap1_opening_sector", label:"Lap 1 opening sector / high-density traffic", delta:+0.20, group:"add", note:"T1–T3 crowded phase" },
 
       { key:"minor_contact", label:"Minor contact – visible but negligible damage", delta:+0.10, group:"add", note:"Light tap / scrape" },
@@ -1423,7 +1499,11 @@
       const applied = clampNumber(total, EFFECT_CAP_MIN, EFFECT_CAP_MAX);
 
       const rawCause = computeRawCauseThisSteward();
-      const finalScore = clampNumber(rawCause + applied, 1, 5);
+      let finalScore = clampNumber(rawCause + applied, 1, 5);
+
+      // First lap golden bullet: force severe floor
+      const hasFirstLap = selected.includes("first_lap_incident");
+      if (hasFirstLap) finalScore = Math.max(finalScore, FIRST_LAP_FINAL_MIN);
 
       return {
         selectedKeys: selected,
@@ -1431,29 +1511,36 @@
         rawCause,
         total,
         applied,
-        finalScore
+        finalScore,
+        hasFirstLap
       };
     }
 
     function renderEffectPreview(){
-      const outRaw = $("rawCauseOut");
-      const outTot = $("effectTotalOut");
-      const outApp = $("effectAppliedOut");
-      const outFin = $("finalScoreOut");
-      const outSel = $("effectSelectedOut");
-
-      if (!outRaw || !outTot || !outApp || !outFin || !outSel) return;
+      const pillRaw = $("pillRaw");
+      const pillEff = $("pillEff");
+      const pillFinal = $("pillFinal");
+      const calcLine = $("calcLine");
+      const selOut = $("effectSelectedOut");
 
       const x = computeEffectTotals();
-      outRaw.textContent = fmt2(x.rawCause);
-      outTot.textContent = (x.total >= 0 ? "+" : "") + fmt2(x.total);
-      outApp.textContent = (x.applied >= 0 ? "+" : "") + fmt2(x.applied) + ` (cap ${fmt2(EFFECT_CAP_MIN)} to +${fmt2(EFFECT_CAP_MAX)})`;
-      outFin.textContent = fmt2(x.finalScore);
 
-      if (!x.selectedLabels.length){
-        outSel.textContent = "Selected effects: —";
-      } else {
-        outSel.textContent = "Selected effects: " + x.selectedLabels.join(" | ");
+      const rawTxt = fmt2(x.rawCause);
+      const effTxt = (x.applied >= 0 ? "+" : "") + fmt2(x.applied);
+      const finTxt = fmt2(x.finalScore);
+
+      if (pillRaw) pillRaw.innerHTML = `RAW: <strong>${rawTxt}</strong>`;
+      if (pillEff) pillEff.innerHTML = `EFFECT: <strong>${effTxt}</strong>`;
+      if (pillFinal) pillFinal.innerHTML = `FINAL: <strong>${finTxt}</strong>`;
+
+      if (calcLine) {
+        const firstLapNote = x.hasFirstLap ? ` (First lap clamp: >= ${fmt2(FIRST_LAP_FINAL_MIN)})` : "";
+        calcLine.textContent = `RAW ${rawTxt}  +  EFFECT ${effTxt}  =  FINAL ${finTxt}${firstLapNote}`;
+      }
+
+      if (selOut) {
+        if (!x.selectedLabels.length) selOut.textContent = "Selected effects: —";
+        else selOut.textContent = "Selected effects: " + x.selectedLabels.join(" | ");
       }
     }
 
@@ -1466,9 +1553,13 @@
       subWrap.innerHTML = "";
 
       function makeItem(ef){
-        const div = document.createElement("label");
-        div.className = "effectItem";
-        div.htmlFor = "ef_" + ef.key;
+        const wrap = document.createElement("label");
+        wrap.className = "effectItem";
+        wrap.htmlFor = "ef_" + ef.key;
+
+        if (ef.key === "first_lap_incident") {
+          wrap.classList.add("effectItemSpecialRed");
+        }
 
         const cb = document.createElement("input");
         cb.type = "checkbox";
@@ -1477,13 +1568,29 @@
         cb.dataset.label = ef.label;
         cb.onchange = () => renderEffectPreview();
 
-        const text = document.createElement("div");
-        text.className = "effectText";
-        text.innerHTML = `${escapeHtml(ef.label)} <small>${ef.delta >= 0 ? "+" : ""}${fmt2(ef.delta)}</small>`;
+        const main = document.createElement("div");
+        main.className = "effectMain";
 
-        div.appendChild(cb);
-        div.appendChild(text);
-        return div;
+        const title = document.createElement("div");
+        title.className = "effectTitle";
+        title.textContent = ef.label;
+
+        const note = document.createElement("div");
+        note.className = "effectNote";
+        note.textContent = (ef.note || "").trim();
+
+        main.appendChild(title);
+        if ((ef.note || "").trim()) main.appendChild(note);
+
+        const pill = document.createElement("div");
+        pill.className = "effectDeltaPill " + (ef.delta >= 0 ? "deltaAdd" : "deltaSub");
+        pill.textContent = (ef.delta >= 0 ? "+" : "") + fmt2(ef.delta);
+
+        wrap.appendChild(cb);
+        wrap.appendChild(main);
+        wrap.appendChild(pill);
+
+        return wrap;
       }
 
       for (const ef of EFFECTS){
@@ -1504,6 +1611,7 @@
         };
       }
 
+      // Wire CAUSE score changes to refresh preview too (raw cause changes)
       for (const id of ["cScore","aScore","uScore","sScore","eScore"]){
         const el = $(id);
         if (el) el.onchange = () => renderEffectPreview();
@@ -1561,6 +1669,7 @@
       statementStatusCache.clear();
       deliberationStatusCache.clear();
 
+      // ✅ ONLY CHANGE: 200 -> 400
       const snap = await db.collection("tickets").limit(400).get();
 
       const docs = snap.docs;
@@ -1667,6 +1776,7 @@
 
       const filterName = filterEl.value;
 
+      // ✅ ONLY CHANGE: 200 -> 400
       ticketHintEl.textContent =
         `Showing ${shown} ticket(s) for filter: "${filterName}". Live workload in batch: ${liveCount} | Needs your input: ${needsMyInputCount}. (Max 400 fetched).`;
     }
@@ -1683,6 +1793,7 @@
       $("discussionList").innerHTML = `<div class="muted">Loading comments…</div>`;
       $("discussionInput").value = "";
 
+      // clear effects when switching tickets
       applySelectedEffects([]);
 
       const ref = db.collection("tickets").doc(ticketId);
@@ -1974,6 +2085,7 @@ Who: ${who || "—"}${desc ? "\n\nDescription:\n" + desc : ""}${ex ? "\n\nExampl
 
       $("penaltyCode").value = d.penaltyCode || "";
 
+      // restore effects
       const eff = d.EFFECT || d.effect || {};
       const keys = Array.isArray(eff.selectedKeys) ? eff.selectedKeys : (Array.isArray(eff.selected) ? eff.selected : []);
       applySelectedEffects(keys);
@@ -2023,19 +2135,24 @@ Who: ${who || "—"}${desc ? "\n\nDescription:\n" + desc : ""}${ex ? "\n\nExampl
             capMax: EFFECT_CAP_MAX,
             rawCauseThisSteward: Number(eff.rawCause),
             finalScoreThisSteward: Number(eff.finalScore),
-            model: "stacking_micro_values_v1"
+            firstLapClampMin: FIRST_LAP_FINAL_MIN,
+            firstLapSelected: !!eff.hasFirstLap,
+            model: "stacking_micro_values_v2_headsteward_match"
           },
           penaltyCode: pen
         };
 
         await ref.set(review, { merge: true });
 
+        // also write auditable steward comment (overwrites per steward per ticket)
         try {
           const authorKey = safeKey(currentEmail);
           const col = db.collection("tickets").doc(selectedTicketId).collection("steward_comments");
           const commentId = `cause_effect_${authorKey || reviewId || "steward"}`;
 
           const effectsLine = eff.selectedLabels.length ? eff.selectedLabels.join(" | ") : "—";
+          const clampLine = eff.hasFirstLap ? `\nFirst lap clamp applied: final >= ${fmt2(FIRST_LAP_FINAL_MIN)}` : "";
+
           const msg =
 `CAUSE + EFFECT REVIEW (INITIAL)
 Steward: ${maskEmail(currentEmail) || "Unknown"}
@@ -2044,7 +2161,7 @@ Penalty selected: ${pen}
 Raw CAUSE (this steward): ${fmt2(eff.rawCause)}
 EFFECT total (stacked): ${(eff.total >= 0 ? "+" : "")}${fmt2(eff.total)}
 EFFECT applied (clamped): ${(eff.applied >= 0 ? "+" : "")}${fmt2(eff.applied)} (cap ${fmt2(EFFECT_CAP_MIN)} to +${fmt2(EFFECT_CAP_MAX)})
-Final Score (this steward): ${fmt2(eff.finalScore)}
+Final Score (this steward): ${fmt2(eff.finalScore)}${clampLine}
 
 Selected effects: ${effectsLine}`;
 
@@ -2061,7 +2178,9 @@ Selected effects: ${effectsLine}`;
               rawCauseThisSteward: Number(eff.rawCause),
               finalScoreThisSteward: Number(eff.finalScore),
               capMin: EFFECT_CAP_MIN,
-              capMax: EFFECT_CAP_MAX
+              capMax: EFFECT_CAP_MAX,
+              firstLapSelected: !!eff.hasFirstLap,
+              firstLapClampMin: FIRST_LAP_FINAL_MIN
             }
           }, { merge: true });
         } catch (e) {
