--- a/s2rules.html
+++ b/s2rules.html
@@ -308,6 +308,7 @@
           <a href="#preface">Preface</a>
           <a href="#compliance">Driver Compliance</a>
           <a href="#section1">Section I — General Rules & Regulations</a>
+          <a href="#gteam3">GTEAM3 — Team Endurance Event Procedures</a>
           <a href="#section2">Section II — Sim Specific Regulations & Keybindings</a>
           <a href="#section3">Section III — Appendices & Tables</a>
           <a href="#section4">Section IV — Addendums & Erratta</a>
@@ -905,6 +906,136 @@
       </div>
     </details>
 
+    <!-- GTEAM3 -->
+    <details class="section anchor" id="gteam3">
+      <summary>
+        <div class="sum-left">
+          <div class="kicker">GTEAM3</div>
+          <div>Team endurance event procedures (ACC) — red flags, restarts, reporting</div>
+        </div>
+        <div class="chev">+</div>
+      </summary>
+      <div class="content">
+        <div class="note">
+          <p class="small">
+            This section is specific to IFWL GTEAM3 team endurance events. If any item conflicts with general IFWL rules, this GTEAM3 section takes priority for GTEAM3 events.
+          </p>
+        </div>
+
+        <div class="rule-grid">
+          <div class="rule">
+            <div class="tag">Discord requirements</div>
+            <ul>
+              <li>Discord participation is mandatory throughout all GTEAM3 sessions (Practice, Qualifying, Race).</li>
+              <li>All teams must actively monitor <span class="pill">#gteam3-announcements</span> during race sessions.</li>
+              <li>Server password can be found in Discord (posted in the relevant channels).</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">Red flag triggers</div>
+            <p>A red flag may be called by IFWL Race Control for:</p>
+            <ul>
+              <li>Mass disconnects / server crash</li>
+              <li>Critical server instability impacting fairness/safety</li>
+              <li>Any issue where the continuation of the session cannot be guaranteed</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">RED FLAG: idiot-proof timeline</div>
+            <p><strong>Step 1 — RED FLAG called (0 minutes)</strong></p>
+            <ul>
+              <li>Admin posts <strong>RED FLAG</strong> in <span class="pill">#gteam3-announcements</span>.</li>
+              <li>All drivers lift, return to pits safely, and await instructions.</li>
+              <li>No overtaking. No leaving the server unless instructed.</li>
+            </ul>
+
+            <p><strong>Step 2 — Cooldown / server offline (0–30 minutes)</strong></p>
+            <ul>
+              <li>Server shuts down for a maximum of <strong>30 minutes</strong>.</li>
+              <li>Admin captures the latest valid running order and prepares restart data.</li>
+              <li>Admin generates the restart grid using <strong>ACM GridMaker</strong>.</li>
+              <li>All teams stay in Discord and watch announcements. Do not attempt to join early.</li>
+            </ul>
+
+            <p><strong>Step 3 — Practice session opens (30–50 minutes)</strong></p>
+            <ul>
+              <li>Server returns in <strong>PRACTICE</strong> for <strong>15–20 minutes</strong>.</li>
+              <li>Teams join calmly, apply setups, and complete any required driver swaps.</li>
+              <li><strong>Starting driver for the restart must join first</strong> (as confirmed in <span class="pill">#team-confirmations</span>).</li>
+              <li>No racing is required in this practice — it exists to organise the restart.</li>
+            </ul>
+
+            <p><strong>Step 4 — Race session loads (50 minutes+)</strong></p>
+            <ul>
+              <li>Admin switches to <strong>RACE</strong> with:</li>
+              <li>Remaining race time applied (downtime removed from race time where applicable)</li>
+              <li>ACM grid order applied</li>
+              <li>Weather and time progression restored as closely as possible</li>
+            </ul>
+
+            <p><strong>Step 5 — Restart (formation + green flag)</strong></p>
+            <ul>
+              <li>Short formation lap.</li>
+              <li>Single file. Hold position.</li>
+              <li>No overtaking until Race Control calls <strong>GREEN</strong>.</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">Race start and restart procedure</div>
+            <p><strong>Standard race start</strong></p>
+            <ul>
+              <li>1 full formation lap</li>
+              <li>Aided rolling start</li>
+              <li>All cars remain in their green box until green flag</li>
+              <li>No overtaking before green flag</li>
+            </ul>
+
+            <p><strong>Red flag restart start</strong></p>
+            <ul>
+              <li>Short formation lap</li>
+              <li>All cars remain in their green box until Race Control calls green</li>
+              <li>No overtaking before green flag</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">First lap incident policy</div>
+            <p>Applies to both standard starts and restarts:</p>
+            <ul>
+              <li>Any team found predominantly at fault for causing a collision on Lap 1 will receive a <strong>Drive Through</strong>.</li>
+              <li>Once announced in <span class="pill">#live-incident-outcomes</span>, the team has <strong>5 laps</strong> to serve the Drive Through.</li>
+              <li>For every lap the penalty is not served, an additional <strong>10s Stop &amp; Go</strong> is applied.</li>
+              <li>IFWL reserves the right to disqualify any team/driver for behaviour below expected standards (including intentional collisions and poor Discord conduct).</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">Incident reporting</div>
+            <ul>
+              <li>All incidents must be reported in <span class="pill">#incident-reporting</span>.</li>
+              <li>Reporting opens immediately after the race concludes.</li>
+              <li>Reporting closes after <strong>24 hours</strong>.</li>
+              <li>Late reports will not be reviewed.</li>
+              <li>Include lap number, timestamp, drivers involved, and a short summary.</li>
+            </ul>
+          </div>
+
+          <div class="rule">
+            <div class="tag">Notes for teams</div>
+            <ul>
+              <li>Expect variable weather and time progression across events.</li>
+              <li>Red flags are for stability/fairness — not for weather.</li>
+              <li>If the grid order cannot be reconstructed reliably, IFWL Race Control will announce the fairest alternative procedure.</li>
+              <li>All other championship rules and regulations can be found in Discord and in the latest version of the IFWL rulebook.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </details>
+
     <!-- SECTION II -->
     <details class="section anchor" id="section2">
       <summary>
@@ -1164,7 +1295,7 @@
     const input = document.getElementById("searchInput");
     const clearBtn = document.getElementById("clearSearch");
 
-    // Only top-level sections (preface/compliance/section1/section2/section3/section4/stewardcodes)
+    // Only top-level sections (preface/compliance/section1/gteam3/section2/section3/section4/stewardcodes)
     const topSections = Array.from(document.querySelectorAll("details.section.anchor"));
 
     function normalize(s){ return (s || "").toLowerCase().replace(/\s+/g," ").trim(); }
